WI-31893 Template project: provide progress indicator for creating a new project